# raytracer-next-2014

./: .gitignore  CMakeLists.txt  format.sh  overview.sh  todo.org
ext/: PKGBUILD  git-clang-format.py
ext/gtest/: CMakeLists.txt
include/: AmbientLight.hpp  BBox.hpp  BRDF.hpp  DirectionalLight.hpp  Globals.hpp  GlossySpecularBRDF.hpp  HammersleySampler.hpp  JitteredSampler.hpp  LambertianBRDF.hpp  Light.hpp  Material.hpp  Matte.hpp  MultiJitteredSampler.hpp  NRooksSampler.hpp  PerfectSpecularBRDF.hpp  PointLight.hpp  PureRandomSampler.hpp  RGBColor.hpp  Ray.hpp  RegularSampler.hpp  Sampler.hpp  ShadeRec.hpp  ViewPlane.hpp
src/: AmbientLight.cpp  BBox.cpp  BRDF.cpp  DirectionalLight.cpp  Globals.cpp  GlossySpecularBRDF.cpp  HammersleySampler.cpp  JitteredSampler.cpp  LambertianBRDF.cpp  Light.cpp  Material.cpp  Matte.cpp  MultiJitteredSampler.cpp  NRooksSampler.cpp  PerfectSpecularBRDF.cpp  PointLight.cpp  PureRandomSampler.cpp  RGBColor.cpp  Ray.cpp  RegularSampler.cpp  Sampler.cpp  ShadeRec.cpp  ViewPlane.cpp  main.cpp
test/: AmbientLightTes.cpp  AmbientLightTest.cpp  BBoxTest.cpp  DirectionalLightTest.cpp  GlobalsTest.cpp  GlossySpecularBRDFTest.cpp  HammersleySamplerTest.cpp  JitteredSamplerTest.cpp  LambertianBRDFTest.cpp  MatteTes.cpp  MatteTest.cpp  MultiJitteredSamplerTest.cpp  NRooksSamplerTest.cpp  PerfectSpecularBRDFTest.cpp  PointLightTes.cpp  PureRandomSamplerTest.cpp  RGBColorTest.cpp  RayTest.cpp  RegularSamplerTest.cpp  ViewPlaneTest.cpp  scaffold.sh
